<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chicken Tale</string>
    <string name="action_settings">Settings</string>
    <string name="menu_quit">Quit</string>
    
    <string name="story_file_path">Story.json</string>
    
    <string name="progress_dialog_fragment_tag">PROGRESS_DIALOG</string>
    <string name="loading_text">Loading&#8230;</string>
    
    <string name="story_text">Story is loading&#8230;</string>
    <string name="first_action_text">Action is loading&#8230;</string>
    <string name="second_action_text">Action is loading&#8230;</string>
    <string name="first_action_tip">&lt;&lt;&lt; SWIPE LEFT</string>
    <string name="second_action_tip">SWIPE RIGHT &gt;&gt;&gt;</string>
    <string name="story_instructions">Swipe left/right to continue the story.</string>
    <string name="the_end_instructions">You\'ve reached The End of the story.  Tap to restart the story.</string>

</resources>
