<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StoryActivity" >
    
    <TextView
        android:id="@+id/story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/story_separator"
        android:text="@string/story_text" />

	<TextView
	    android:id="@+id/firstActionTip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/story"
        android:text="@string/first_action_tip" />
	
	<TextView
        android:id="@+id/firstAction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstActionTip"
        android:paddingBottom="@dimen/action_separator"
        android:text="@string/first_action_text" />
	
	<TextView
	    android:id="@+id/secondActionTip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstAction"
        android:gravity="right"
        android:text="@string/second_action_tip" />
	
	<TextView
	    android:id="@+id/secondAction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondActionTip"
        android:gravity="right"
        android:text="@string/second_action_text" />
	
	<TextView 
	    android:id="@+id/instruction"
	    android:layout_alignParentBottom="true"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:paddingBottom="@dimen/story_separator"
	    android:text="@string/the_end_instructions" />

</RelativeLayout>
